# hero-ai

./: .env.example  .gitignore  CLAUDE.md  DEMO.md  FRICTION.md  HERO_AI_PRD.md  HERO_AI_TECHNICAL_SPEC.md  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_claim_type.py  0003_flywheel_hardening.py  0004_app_user.py  0005_ticket_event.py  0006_building_public_intake.py  0007_pipeline_status.py  0008_nova_conversation.py  0009_fix_created_at_defaults.py
design/nova-reference/hero-diagnosis/: README.md  index.html
docs/research/: compass_architecture_review_2026-07.md
evals/: run_eval.py  run_nova_eval.py
evals/golden_tickets/: complex_hvac_clarify.json  complex_multi_symptom_hvac.json  gas_escalation.json  simple_faucet_fast_path.json  simple_plumbing.json  vague_organic_clarify.json
evals/nova_cases/: nova_001_hazard_mid_chat.json  nova_002_gas_danger_question.json  nova_003_tenancy_rights.json  nova_004_injection.json  nova_005_vague_intake.json  nova_006_medical.json
scripts/: probe_retrieval.py  smoke_vlm.py  trace_hybrid_real.py  trace_verify_live.py
src/hero/: buildings.py  config.py
src/hero/adapters/: bge_reranker.py  cohere_reranker.py  colmodernvbert.py  litellm_vlm.py  platt.py  stub_calibrator.py  stub_catalog.py  stub_embedder.py  stub_reranker.py  stub_vlm.py
src/hero/api/: background.py  deps.py  (+4 more)
tests/: conftest.py
tests/integration/: test_ingestion.py  test_retrieval.py
tests/invariants/: conftest.py  test_flywheel.py  test_inv1_safety.py  test_inv3_no_blobs.py  test_inv4_no_self_confidence.py  test_inv5_clarify.py  test_inv6_checkpoints.py  test_inv7_no_sensor.py  test_inv_org_scoping.py  test_ledger_roundtrip.py  test_nova_conversation.py  test_nova_safety.py  test_public_chat_roundtrip.py  test_public_roundtrip.py  test_ratelimit_postgres.py  test_timestamp_defaults.py
tests/unit/: test_adapter_contracts.py  test_auth.py  test_calibrators.py  test_config.py  test_diagnose_parse.py  test_graph_build.py  test_index_integrity.py  test_ledger.py  test_ledger_api.py  test_nova_bridge.py  test_nova_chat.py  test_nova_guardrails.py  test_public_api.py  test_public_chat_api.py  test_real_adapter_contracts.py  test_resume_guard.py  test_sparse_tokenization.py  test_sufficiency_clarify.py  test_tickets_list.py  test_tracing.py  test_triage_routing.py  test_verify_claims.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  api.ts  errors.ts  nova-ui.tsx  photos.ts  styles.css  types.ts
(+58 files in other folders)
