[project]
name = "hero-ai"
version = "0.1.0"
description = "AI-powered diagnostic + procurement operating system for building maintenance"
requires-python = ">=3.12,<3.13"
dependencies = [
    # Orchestration (DEC-1: LangGraph standalone, no langchain meta-packages)
    "langgraph==0.4.1",
    "langgraph-checkpoint-postgres==2.0.18",
    "psycopg[binary]==3.3.4",  # required by langgraph-checkpoint-postgres
    # API
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.3",
    # DB
    "asyncpg==0.30.0",
    "sqlalchemy[asyncio]==2.0.41",
    "alembic==1.15.2",
    # Object storage (INV-3: presigning only)
    "boto3==1.38.34",
    # LLM routing
    "litellm==1.73.0",
    # Observability
    "langfuse==3.0.1",
    # Config
    "pydantic-settings==2.9.1",
    # Vectors (DEC-3: Qdrant stays)
    "qdrant-client==1.14.2",
    # HTTP
    "httpx==0.28.1",
    # Embedder (ColPali-family, DEC-2 / BL-5)
    "colpali-engine==0.3.17",
    "torch==2.11.0",
    "transformers==5.13.0",
    "Pillow==12.3.0",
    # Reranker (BL-1, DEC-8: self-hosted)
    "sentence-transformers==5.6.0",
    # Ingestion (PDF → page images)
    "pypdfium2==5.11.0",
    # Calibration (DEC-5: Platt/isotonic)
    "scikit-learn==1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-asyncio==1.4.0",
    "testcontainers[postgres,qdrant]==4.14.2",
    "aiosqlite==0.21.0",  # async SQLite for flywheel tests without Docker
    "ruff==0.11.12",
    "mypy==1.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hero"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "langgraph.*",
    "langgraph_checkpoint_postgres.*",
    "langchain_core.*",
    "langsmith.*",
    "litellm.*",
    "langfuse.*",
    "qdrant_client.*",
    "testcontainers.*",
    "colpali_engine.*",
    "torch.*",
    "transformers.*",
    "sentence_transformers.*",
    "PIL.*",
    "pypdfium2.*",
    "sklearn.*",
]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
